Add CI and test setup

--- a/readme.org
+++ b/readme.org
@@ -26,3 +26,10 @@
       (dired-sidebar-toggle-sidebar)
       (ibuffer-sidebar-toggle-sidebar))
   #+end_src
+* Contributing
+  #+begin_src sh :tangle yes
+  cask
+  make compile
+  make test
+  make lint
+  #+end_src
